# cortiq-gateway

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
bench/: accuracy.py  body.json  cortiq.bench.toml  mock.js  run.sh  tasks.jsonl
config/: gateway.compose.toml  gateway.example.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.ru.md  PROTOCOLS.md  PROTOCOLS.ru.md  ROUTER.md  ROUTER.ru.md  ROUTING.md  ROUTING.ru.md
src/: cache.rs  cmf_runtime.rs  config.rs  error.rs  import.rs  main.rs  model.rs  pipeline.rs  promotion.rs  registry.rs  router_client.rs  routing.rs  secrets.rs  state.rs  stats.rs
src/admin/: assets.rs  mod.rs
src/protocols/: anthropic_messages.rs  mcp.rs  mod.rs  native_passthrough.rs  openai_chat.rs  openai_completions.rs  openai_embeddings.rs  openai_models.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
web/: index.html
web/css/: styles.css
web/js/: api.js  app.js  charts.js  i18n.js  ui.js
web/js/i18n/: de.js  en.js  es.js  fr.js  ru.js  tr.js  zh.js
web/js/views/: dashboard.js  import.js  keys.js  login.js  models.js  playground.js  protocols.js  routing.js  settings.js
